<resources>
    <string name="app_name">CS5520_FinalProject_Group2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FullName">Full Name:</string>
    <string name="Email">Email:</string>
    <string name="Password">Password:</string>
    <string name="GoToLoginTextView">Already have account? Click here to login!</string>
    <string name="Register">Register</string>
    <string name="GoToRegisterTextView">Don\'t have account? Click here to register!</string>
    <string name="Login">Login</string>
    <string name="Welcome">Welcome</string>
    <string name="GoToMyTimeTable">Go To My Time Table</string>
    <string name="Logout">Log out</string>
    <string name="MyTimeTable">My TimeTable</string>
    <string name="Quit">Quit</string>
    <string name="AddNewToTable">Add To Table</string>
    <string name="addEventTitle">Add An Event</string>
    <string name="addEventName" />
    <string name="addEventNameHint">Event Name</string>
    <string name="addStartTimeHint">Event Start Time(00:00 - 23:59)</string>
    <string name="addStartTime" />
    <string name="addEndTimeHint">Event End Time (00:00 - 23:59)</string>
    <string name="addEventEndTime" />
    <string name="addEventLocationHint">Event Location</string>
    <string name="addEventLocation" />
    <string name="addRepeat">Repeat on</string>
    <string name="addMon">Mon</string>
    <string name="addTue">Tue</string>
    <string name="addWed">Wed</string>
    <string name="addThu">Thu</string>
    <string name="addFri">Fri</string>
    <string name="addNon">Non</string>
    <string name="addSaveButton">save</string>
    <string name="editEventTitle">Edit An Event</string>
    <string name="editEventName" />
    <string name="editStartTime" />
    <string name="editEndTime" />
    <string name="editEventLocation" />
    <string name="editSaveButton">save</string>
    <string name="previousButton">Previous</string>
    <string name="nextButton">next</string>
    <string name="timeTableButton">Add Event</string>
    <string name="eventRowName" />
    <string name="eventRowTime" />
    <string name="eventRowLocation" />
    <string name="editMon">Mon</string>
    <string name="editTue">Tue</string>
    <string name="editWed">Wed</string>
    <string name="editThu">Thu</string>
    <string name="editFri">Fri</string>
    <string name="editDeleteButton">Delete</string>
    <string name="dayView">Event for Monday</string>
    <string name="timeTableMon">Mon</string>
    <string name="timeTableTue">Tue</string>
    <string name="timeTableWed">Wed</string>
    <string name="timeTableThu">Thu</string>
    <string name="timeTableFri">Fri</string>
    <string name="timeTableBack">Back</string>
    <string name="addBack">Back</string>
    <string name="editBack">back</string>>
</resources>