<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <TextView
        android:id="@+id/eventRowName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:text="@string/eventRowName"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/eventRowTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:text="@string/eventRowTime" />

    <TextView
        android:id="@+id/eventRowLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:text="@string/eventRowLocation" />
</LinearLayout>