<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LoginPageFragment">

    <EditText
        android:id="@+id/loginEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/loginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/goToRegisterTextView"
        app:layout_constraintEnd_toEndOf="@+id/loginEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/loginEmailAddress" />

    <TextView
        android:id="@+id/goToRegisterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GoToRegisterTextView"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Login"
        app:layout_constraintEnd_toEndOf="@+id/goToRegisterTextView"
        app:layout_constraintStart_toStartOf="@+id/goToRegisterTextView"
        app:layout_constraintTop_toBottomOf="@+id/goToRegisterTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>